# SimpleSQLite

./: CMakeLists.txt  README.md  SQLite.c
